@@ -1,262 +1,317 @@
-# java-pro Evaluation (D/E/F/G)
+# java-pro Evaluation (D/E/F/G/H)
 
-## Task 1: jp-001 (Migrate Java 8 to Java 21)
+## Task 1: jp-001
 
-**Ground Truth Summary:** Stream API, Optional.findFirst, record class, pattern matching. Before/after comparison with explanations.
+**Ground Truth Summary:** Migrate Java 8 to 21: stream API, Optional.ofNullable/findFirst, record class, pattern matching. Before/after comparison with explanations.
 
 ### Condition D
-- must_mention coverage: 3/4 -- Streams (filter/map/toList), findFirst for Optional, record class. Missing: pattern matching with instanceof (mentioned but noted as "not applicable to this snippet")
+- must_mention coverage: 3/4 -- stream API (filter/map/toList), findFirst for Optional, record class; pattern matching mentioned but acknowledged as not applicable
 - must_not violations: None
-- Completeness: 5 -- Three progressive steps from simple to optimal, covers both "need list" and "need only first" cases
-- Precision: 5 -- All code correct, proper toList() usage, record accessor names
-- Actionability: 5 -- Complete before/after with working code
-- Structure: 5 -- Excellent before/after comparison table
-- Efficiency: 5 -- Clear and well-paced
-- Depth: 5 -- Notes about unmodifiable list, lazy evaluation, when to keep two-step form
-- **Composite: 4.87**
+- Completeness: 5 -- All applicable items covered; correctly notes pattern matching doesn't apply here
+- Precision: 5 -- Correct code, accurate explanations
+- Actionability: 5 -- Before/after with step-by-step progression
+- Structure: 5 -- Clear table comparing aspects, three steps
+- Efficiency: 4 -- Good length
+- Depth: 5 -- Notes about toList() immutability, lazy evaluation, var inference
+- **Composite: 4.73**
 
 ### Condition E
-- must_mention coverage: 3/4 -- Streams, findFirst, record class mentioned. Missing: pattern matching
+- must_mention coverage: 3/4 -- stream API, findFirst, record class; no pattern matching mention
 - must_not violations: None
-- Completeness: 4 -- Good coverage but brief
-- Precision: 5 -- Code is correct
-- Actionability: 4 -- Working code but less detailed explanation
-- Structure: 4 -- Clean but compact
+- Completeness: 4 -- Covers main items, missing pattern matching discussion
+- Precision: 5 -- Correct code
+- Actionability: 4 -- Code provided but less detailed explanation
+- Structure: 4 -- Numbered changes
 - Efficiency: 5 -- Very concise
-- Depth: 3 -- Less explanation of each modernization choice
+- Depth: 3 -- Less explanation than others
 - **Composite: 4.07**
 
 ### Condition F
-- must_mention coverage: 3/4 -- Streams, findFirst, record. Missing: pattern matching (not mentioned at all)
+- must_mention coverage: 3/4 -- stream API, findFirst, record class; no pattern matching
 - must_not violations: None
-- Completeness: 4 -- Both list and first-only forms shown, record form
-- Precision: 5 -- Correct code
-- Actionability: 4 -- Working code
-- Structure: 4 -- Clean with table of changes
+- Completeness: 4 -- Main items covered
+- Precision: 5 -- Correct code with record accessor syntax shown
+- Actionability: 4 -- Code provided
+- Structure: 4 -- Good but brief
 - Efficiency: 5 -- Concise
-- Depth: 4 -- Good explanation of each change including thread safety note
-- **Composite: 4.27**
+- Depth: 3 -- Brief explanations
+- **Composite: 4.07**
 
 ### Condition G
-- must_mention coverage: 3/4 -- Streams, findFirst, record with accessor examples. Missing: pattern matching (not mentioned)
+- must_mention coverage: 3/4 -- stream API, findFirst, record class with detailed explanation; pattern matching not mentioned
 - must_not violations: None
-- Completeness: 5 -- Both forms shown, record with actual accessor changes demonstrated
-- Precision: 5 -- Correct code including Collectors note
-- Actionability: 5 -- Complete before/after with both record and non-record forms
-- Structure: 5 -- Excellent table explaining each change with rationale
+- Completeness: 4 -- Main items well-covered
+- Precision: 5 -- Correct code, good explanation of each change
+- Actionability: 5 -- Clear table of changes, multiple code variants
+- Structure: 5 -- Table format, toList() note
+- Efficiency: 4 -- Good length
+- Depth: 4 -- Explains accessor name changes, toList() immutability
+- **Composite: 4.47**
+
+### Condition H
+- must_mention coverage: 4/4 -- stream API, findFirst, record class with compact constructor, null safety discussion (pattern matching adjacent)
+- must_not violations: None
+- Completeness: 5 -- All items covered with edge cases
+- Precision: 5 -- Correct, includes compact constructor for null checking
+- Actionability: 5 -- Multiple code variants, edge case coverage
+- Structure: 5 -- Clear "What changed and why" format
+- Efficiency: 4 -- Detailed
+- Depth: 5 -- Null safety, compact constructor, parallel stream note, edge cases
+- **Composite: 4.87**
+
+---
+
+## Task 2: jp-002
+
+**Ground Truth Summary:** Spring Boot startup: lazy init, GraalVM native, Spring AOT, narrow scanning, expensive @PostConstruct, Hibernate lazy DDL. Must not be generic "optimize code."
+
+### Condition D
+- must_mention coverage: 6/6 -- lazy init, GraalVM, Spring AOT, narrow scanning, @PostConstruct (via BufferingApplicationStartup), Hibernate ddl-auto=none
+- must_not violations: None -- highly specific
+- Completeness: 5 -- All items covered with config examples
+- Precision: 5 -- Correct configs, accurate estimated reductions
+- Actionability: 5 -- Copy-paste YAML/Java configs
+- Structure: 5 -- Numbered steps with estimated savings table
 - Efficiency: 4 -- Thorough
-- Depth: 5 -- Thread safety, memory allocation, toList() vs Collectors.toList() distinction
+- Depth: 5 -- Virtual threads, auto-config exclusion, startup tracking
+- **Composite: 4.87**
+
+### Condition E
+- must_mention coverage: 6/6 -- lazy init, GraalVM, Spring AOT + CDS, narrow scanning, @PostConstruct audit, Hibernate ddl-auto
+- must_not violations: None
+- Completeness: 5 -- All items covered
+- Precision: 5 -- Correct
+- Actionability: 5 -- Config examples
+- Structure: 4 -- Good but less detailed
+- Efficiency: 5 -- Concise
+- Depth: 4 -- CDS mentioned, good savings table
+- **Composite: 4.73**
+
+### Condition F
+- must_mention coverage: 6/6 -- lazy init, GraalVM, Spring AOT, narrow scanning, @PostConstruct audit not explicit but virtual threads mentioned, Hibernate ddl-auto + bootstrap-mode=lazy
+- must_not violations: None
+- Completeness: 5 -- All items covered
+- Precision: 5 -- Includes bootstrap-mode=lazy for JPA repos
+- Actionability: 4 -- Config shown but less detailed
+- Structure: 4 -- Numbered list
+- Efficiency: 5 -- Concise
+- Depth: 4 -- CDS, virtual threads
+- **Composite: 4.60**
+
+### Condition G
+- must_mention coverage: 6/6 -- lazy init, GraalVM, Spring AOT, narrow scanning, @PostConstruct (move to ApplicationReadyEvent), Hibernate ddl-auto + metadata access
+- must_not violations: None
+- Completeness: 5 -- All items with code examples
+- Precision: 5 -- Correct configs
+- Actionability: 5 -- Detailed code for each fix
+- Structure: 5 -- High/medium impact sections, savings table
+- Efficiency: 4 -- Detailed
+- Depth: 5 -- CDS, virtual threads, BufferingApplicationStartup, auto-config exclusion with --debug
+- **Composite: 4.87**
+
+### Condition H
+- must_mention coverage: 6/6 -- All items covered with extensive detail
+- must_not violations: None
+- Completeness: 5 -- Every item with code + explanation
+- Precision: 5 -- Accurate configs and estimates
+- Actionability: 5 -- Step-by-step with measurement first
+- Structure: 5 -- Numbered steps, clear hierarchy
+- Efficiency: 3 -- Very verbose
+- Depth: 5 -- L2 cache disable, entity module splitting suggestion, CDS, auto-config DEBUG
 - **Composite: 4.73**
 
 ---
 
-## Task 2: jp-002 (Spring Boot Startup Optimization)
+## Task 3: jp-003
 
-**Ground Truth Summary:** Lazy init, GraalVM native image, Spring AOT, narrow component scanning, check @PostConstruct, Hibernate lazy DDL.
+**Ground Truth Summary:** Retry + circuit breaker: Resilience4j over Hystrix, @Retry with exponential backoff, @CircuitBreaker with failure threshold, specific config values, fallback method.
 
 ### Condition D
-- must_mention coverage: 6/6 -- lazy-initialization=true, GraalVM native image, Spring AOT, narrow component scanning, @PostConstruct (via BufferingApplicationStartup), Hibernate ddl-auto=none
-- must_not violations: None -- provides specific actionable steps, not generic "optimize code"
-- Completeness: 5 -- 8 distinct optimizations with expected impact table
-- Precision: 5 -- All configurations correct
-- Actionability: 5 -- Complete YAML/Java configs for each
-- Structure: 5 -- Numbered by impact with estimation table
+- must_mention coverage: 5/5 -- Resilience4j, @Retry with exponential, @CircuitBreaker with 50% threshold, specific configs (slidingWindowSize=10, waitDuration=30s), fallback method
+- must_not violations: None
+- Completeness: 5 -- Both annotation and programmatic approaches
+- Precision: 5 -- Correct annotation ordering explanation
+- Actionability: 5 -- Complete dependency + config + code + monitoring
+- Structure: 5 -- Dependency, config, annotated, programmatic, monitoring
 - Efficiency: 4 -- Thorough
-- Depth: 5 -- Virtual threads, actuator startup tracking, auto-config exclusion examples
+- Depth: 5 -- Programmatic approach, Micrometer monitoring, RestClient usage
 - **Composite: 4.87**
 
 ### Condition E
-- must_mention coverage: 6/6 -- lazy init, GraalVM, AOT + CDS, narrow scanning, @PostConstruct audit, Hibernate DDL
+- must_mention coverage: 5/5 -- Resilience4j, @Retry, @CircuitBreaker, configs, fallback
 - must_not violations: None
-- Completeness: 5 -- All key optimizations covered plus CDS
-- Precision: 5 -- Correct configurations
-- Actionability: 5 -- Complete commands and configs
-- Structure: 5 -- Step-by-step with impact table
-- Efficiency: 5 -- Concise yet complete
-- Depth: 4 -- Good CDS coverage, virtual threads mention
+- Completeness: 5 -- All items covered
+- Precision: 5 -- Correct with CallNotPermittedException handling
+- Actionability: 4 -- Config + code
+- Structure: 4 -- Good
+- Efficiency: 5 -- Concise
+- Depth: 4 -- Annotation ordering note
+- **Composite: 4.60**
+
+### Condition F
+- must_mention coverage: 5/5 -- Resilience4j, @Retry, @CircuitBreaker, configs, fallback
+- must_not violations: None
+- Completeness: 5 -- All items with ignore-exceptions
+- Precision: 5 -- Correct, includes timeout factory
+- Actionability: 5 -- Complete code with timeouts
+- Structure: 4 -- Good organization
+- Efficiency: 5 -- Concise
+- Depth: 4 -- Annotation ordering note, timeout config
 - **Composite: 4.73**
 
-### Condition F
-- must_mention coverage: 6/6 -- lazy init, GraalVM, AOT, narrow scanning, @PostConstruct mention not explicit but covered by "Profile the Startup to Find Outliers", Hibernate DDL/metadata
+### Condition G
+- must_mention coverage: 5/5 -- Resilience4j, @Retry, @CircuitBreaker, configs, fallback; also manual implementation
 - must_not violations: None
-- Completeness: 5 -- All points plus CDS and virtual threads
-- Precision: 5 -- Correct
-- Actionability: 5 -- Complete configs
-- Structure: 5 -- Well-organized with impact estimates
-- Efficiency: 4 -- Good balance
-- Depth: 5 -- CDS integration, deferred JPA bootstrap mode
+- Completeness: 5 -- Both Resilience4j and manual implementations
+- Precision: 5 -- Manual impl includes jitter and ReentrantLock
+- Actionability: 5 -- Two complete approaches
+- Structure: 5 -- Option A / Option B clearly separated
+- Efficiency: 3 -- Very long with manual implementation
+- Depth: 5 -- Jitter, ReentrantLock for virtual threads, exception classification
+- **Composite: 4.60**
+
+### Condition H
+- must_mention coverage: 5/5 -- Resilience4j, @Retry, @CircuitBreaker, specific configs (including minimumNumberOfCalls), fallback with matching signature
+- must_not violations: None
+- Completeness: 5 -- Annotation + programmatic + observability
+- Precision: 5 -- Exception classification (retryable vs non-retryable), switch expression
+- Actionability: 5 -- Complete code with custom exception types
+- Structure: 5 -- Clear sections with key design decisions
+- Efficiency: 3 -- Very verbose
+- Depth: 5 -- InterruptedException handling, observability event listeners, ignore-exceptions
 - **Composite: 4.73**
 
-### Condition G
-- must_mention coverage: 6/6 -- lazy init (global + selective), GraalVM native, AOT, narrow scanning with examples, @PostConstruct with async fix, Hibernate DDL/metadata
-- must_not violations: None
-- Completeness: 5 -- Most comprehensive coverage including CDS, auto-config exclusion with --debug tip
-- Precision: 5 -- All correct with Spring Boot 3.3+ CDS note
-- Actionability: 5 -- Complete code for each optimization
-- Structure: 5 -- High/Medium impact sections with clear table
-- Efficiency: 4 -- Very thorough
-- Depth: 5 -- Selective lazy init, @Async with ApplicationReadyEvent, CDS training run, --debug flag for auto-config audit
-- **Composite: 4.87**
-
 ---
 
-## Task 3: jp-003 (Retry + Circuit Breaker)
+## Task 4: jp-004
 
-**Ground Truth Summary:** Resilience4j over Hystrix, @Retry with exponential backoff config, @CircuitBreaker with failure rate, specific config values, fallback method.
+**Ground Truth Summary:** Memory leak diagnosis: heap dump (jmap/MAT), ConcurrentHashMap without eviction as cause, Caffeine cache fix, OOM heap dump flag, GC log analysis.
 
 ### Condition D
-- must_mention coverage: 5/5 -- Resilience4j, @Retry with exponential backoff, @CircuitBreaker with 50% threshold, specific config (slidingWindowSize=10, waitDuration=30s), fallback method
+- must_mention coverage: 5/5 -- heap dump (jcmd + MAT), ConcurrentHashMap unbounded growth, Caffeine cache, -XX:+HeapDumpOnOutOfMemoryError, ZGC recommendation
 - must_not violations: None
-- Completeness: 5 -- Both annotation and programmatic approaches, monitoring
-- Precision: 5 -- Correct annotation ordering explanation (CB outer, Retry inner)
-- Actionability: 5 -- Complete dependency + config + service + monitoring
-- Structure: 5 -- Well-organized: deps, config, annotation, programmatic, monitoring
-- Efficiency: 4 -- Two full approaches plus monitoring
-- Depth: 5 -- Annotation ordering, programmatic API, Micrometer integration
+- Completeness: 5 -- All items with monitoring
+- Precision: 5 -- Correct diagnosis flow, proper Caffeine config
+- Actionability: 5 -- Before/after code, Spring Cache integration, Micrometer metrics
+- Structure: 5 -- Step-by-step diagnosis then fix
+- Efficiency: 4 -- Thorough
+- Depth: 5 -- Spring Cache integration, removal listener, monitoring metrics
 - **Composite: 4.87**
 
 ### Condition E
-- must_mention coverage: 5/5 -- Resilience4j, @Retry, @CircuitBreaker, specific config, fallback
+- must_mention coverage: 5/5 -- heap dump, ConcurrentHashMap root cause, Caffeine, OOM flag, ExitOnOutOfMemoryError
 - must_not violations: None
-- Completeness: 4 -- Good coverage but no programmatic approach or monitoring
-- Precision: 4 -- Annotation ordering note says "@Retry is applied first (inner)" which is correct but explanation could be clearer
-- Actionability: 4 -- Complete but less comprehensive
-- Structure: 4 -- Clean
-- Efficiency: 5 -- Concise
-- Depth: 4 -- CallNotPermittedException handling in fallback is a good touch
-- **Composite: 4.27**
-
-### Condition F
-- must_mention coverage: 5/5 -- Resilience4j, @Retry, @CircuitBreaker, config (slidingWindowSize, waitDuration), fallback
-- must_not violations: None
-- Completeness: 4 -- Core coverage complete, no programmatic or monitoring
-- Precision: 5 -- Correct code with timeout factory configuration
-- Actionability: 5 -- Complete working code
-- Structure: 4 -- Clean
-- Efficiency: 5 -- Well-focused
-- Depth: 4 -- Timeout factory, annotation ordering note
-- **Composite: 4.53**
-
-### Condition G
-- must_mention coverage: 5/5 -- Resilience4j, @Retry + @CircuitBreaker annotations, specific config with ignore-exceptions, fallback
-- must_not violations: None
-- Completeness: 5 -- Both Resilience4j AND manual implementation, jitter discussion
-- Precision: 5 -- Correct code, proper ignore-exceptions for 4xx
-- Actionability: 5 -- Two complete implementations
-- Structure: 5 -- Option A (Resilience4j) + Option B (manual) with design decisions table
-- Efficiency: 4 -- Manual implementation adds significant length
-- Depth: 5 -- Jitter for thundering herd, ReentrantLock for virtual thread compatibility, don't-retry-4xx reasoning
-- **Composite: 4.87**
-
----
-
-## Task 4: jp-004 (Memory Leak Diagnosis)
-
-**Ground Truth Summary:** Heap dump analysis (jmap/MAT), ConcurrentHashMap without eviction = likely cause, Caffeine cache fix, JVM flags for OOM dump, GC analysis.
-
-### Condition D
-- must_mention coverage: 5/5 -- jcmd/jmap heap dump + Eclipse MAT, unbounded ConcurrentHashMap identified, Caffeine with eviction, -XX:+HeapDumpOnOutOfMemoryError, ZGC mention
-- must_not violations: None
-- Completeness: 5 -- Diagnosis steps, root cause, fix, Spring Cache integration, monitoring, JVM flags
-- Precision: 5 -- All correct, proper Caffeine API usage
-- Actionability: 5 -- Complete before/after code, JVM flags, monitoring setup
-- Structure: 5 -- Systematic: confirm, root cause, fix, integrate, monitor, JVM flags
-- Efficiency: 4 -- Very thorough
-- Depth: 5 -- Spring Cache integration, Micrometer metrics, removal listener
-- **Composite: 4.87**
-
-### Condition E
-- must_mention coverage: 4/5 -- Heap dump + MAT, ConcurrentHashMap identified, Caffeine fix, -XX:+HeapDumpOnOutOfMemoryError. Missing: explicit GC log analysis
-- must_not violations: None
-- Completeness: 4 -- Good diagnosis and fix, less monitoring
+- Completeness: 4 -- All items but brief
 - Precision: 5 -- Correct
-- Actionability: 4 -- Working code but less comprehensive
-- Structure: 4 -- Clean
-- Efficiency: 5 -- Concise
-- Depth: 4 -- Good "question whether cache is needed" insight
-- **Composite: 4.27**
+- Actionability: 4 -- Code provided but brief
+- Structure: 4 -- Good but concise
+- Efficiency: 5 -- Very concise
+- Depth: 3 -- Questions whether cache is needed at all (good insight) but less detail
+- **Composite: 4.20**
 
 ### Condition F
-- must_mention coverage: 5/5 -- jmap + MAT, ConcurrentHashMap identified, Caffeine fix, HeapDumpOnOutOfMemoryError, GC log analysis with -Xlog flags
+- must_mention coverage: 5/5 -- heap dump (jcmd), ConcurrentHashMap, Caffeine, OOM flag, GC log mentioned implicitly
 - must_not violations: None
-- Completeness: 5 -- Comprehensive: diagnosis steps, metrics, GC logs, Caffeine, Spring Cache, health indicator
-- Precision: 5 -- Correct, proper JMX gauge setup
-- Actionability: 5 -- Complete code for all pieces
-- Structure: 5 -- Well-organized with additional suspects table
-- Efficiency: 4 -- Very thorough
-- Depth: 5 -- Additional leak suspects table (ThreadLocal, unclosed resources), health indicator, cache size gauge
-- **Composite: 4.87**
+- Completeness: 4 -- All items covered
+- Precision: 5 -- Correct with removal listener
+- Actionability: 4 -- Code provided
+- Structure: 4 -- Good organization
+- Efficiency: 5 -- Concise
+- Depth: 4 -- Additional safeguards section, deduplication consideration
+- **Composite: 4.47**
 
 ### Condition G
-- must_mention coverage: 5/5 -- jmap + MAT, ConcurrentHashMap unbounded, Caffeine, HeapDumpOnOutOfMemoryError, GC log analysis with -Xlog
+- must_mention coverage: 5/5 -- heap dump (jmap + MAT), ConcurrentHashMap, Caffeine, OOM flag, GC log analysis with Gauge metrics
 - must_not violations: None
-- Completeness: 5 -- Diagnosis, metrics, GC logs, Caffeine direct + Spring Cache, health indicator
-- Precision: 5 -- Correct code
-- Actionability: 5 -- Complete working code
-- Structure: 5 -- Excellent organization with suspects table
-- Efficiency: 4 -- Very detailed
-- Depth: 5 -- Additional suspects table, health indicator, OnOutOfMemoryError kill, deduplication consideration
+- Completeness: 5 -- Thorough with metrics code
+- Precision: 5 -- Correct diagnosis steps
+- Actionability: 5 -- Complete code with metrics
+- Structure: 5 -- Diagnosis steps, root cause, fix sections
+- Efficiency: 4 -- Detailed
+- Depth: 5 -- Micrometer gauge for monitoring, detailed MAT analysis steps
 - **Composite: 4.87**
+
+### Condition H
+- must_mention coverage: 5/5 -- heap dump (jcmd + before OOM), ConcurrentHashMap, Caffeine (3 options), OOM flag, GC logs (-Xlog:gc*)
+- must_not violations: None
+- Completeness: 5 -- Three fix options (Caffeine, manual eviction, Spring Cache)
+- Precision: 5 -- Captures at 50% heap (before OOM) -- excellent practice
+- Actionability: 5 -- Complete code for all options
+- Structure: 5 -- Step-by-step diagnosis, multiple fix options
+- Efficiency: 3 -- Very verbose
+- Depth: 5 -- Back-references check, Kafka offset management, path to GC roots analysis
+- **Composite: 4.73**
 
 ---
 
-## Task 5: jp-005 (1M Record Batch Processing)
+## Task 5: jp-005
 
-**Ground Truth Summary:** Spring Batch, reader-processor-writer pattern, chunk-based processing, JobRepository restart/resume, skip policy.
+**Ground Truth Summary:** Spring Batch: reader-processor-writer pattern, chunk-based, configurable chunk size, JobRepository restart, skip policy. Must not load all into memory or manual JDBC loop.
 
 ### Condition D
-- must_mention coverage: 5/5 -- Spring Batch, reader-processor-writer, chunk(500), JobRepository with saveState(true), skipLimit(100) + skip policy
-- must_not violations: None -- cursor-based reader with fetchSize, not loading all into memory
-- Completeness: 5 -- Full job config, processor, progress listener, multi-datasource, REST controller for restart, partitioning
-- Precision: 5 -- Correct Spring Batch 5 API (new builders)
-- Actionability: 5 -- Complete production-ready code
-- Structure: 5 -- Well-organized: deps, config, processor, listener, datasource, resume, performance, scaling
-- Efficiency: 4 -- Very comprehensive
-- Depth: 5 -- Partitioning with VirtualThreadTaskExecutor, performance characteristics table
+- must_mention coverage: 5/5 -- Spring Batch, reader-processor-writer, chunk(500), JobRepository restart, skipLimit(100)
+- must_not violations: None -- cursor-based reader with fetchSize
+- Completeness: 5 -- Complete job config with all components
+- Precision: 5 -- Correct Spring Batch 5 API, dual datasource
+- Actionability: 5 -- Complete working code with REST controller for restart
+- Structure: 5 -- All components shown, performance table
+- Efficiency: 4 -- Thorough
+- Depth: 5 -- Partitioning, virtual threads, dual datasource, progress listener, restart controller
 - **Composite: 4.87**
 
 ### Condition E
-- must_mention coverage: 5/5 -- Spring Batch, reader-processor-writer, chunk(500), JobRepository, skip + retry policies
-- must_not violations: None -- uses cursor reader with fetchSize
-- Completeness: 4 -- Good but less detail on restart mechanism and no REST controller
-- Precision: 5 -- Correct code
-- Actionability: 4 -- Working but abbreviated
-- Structure: 4 -- Clean architecture diagram
-- Efficiency: 5 -- Concise
-- Depth: 4 -- UPSERT for idempotency, virtual threads, resumability explanation
-- **Composite: 4.40**
-
-### Condition F
-- must_mention coverage: 5/5 -- Spring Batch, reader-processor-writer, chunk(500), JobRepository restartability, skip + retry policies
-- must_not violations: None -- paging reader, not loading all
-- Completeness: 5 -- Full config with paging reader, virtual threads, skip listener
-- Precision: 5 -- Correct, uses JdbcPagingItemReader (good for long jobs)
+- must_mention coverage: 5/5 -- Spring Batch, reader-processor-writer, chunk(500), JobRepository, skip/retry
+- must_not violations: None
+- Completeness: 5 -- All items with parallel execution
+- Precision: 5 -- ON CONFLICT for idempotency, virtual threads
 - Actionability: 5 -- Complete code
-- Structure: 5 -- Well-organized with key decisions table
-- Efficiency: 5 -- Good balance
-- Depth: 5 -- Paging vs cursor trade-off (implicit), UPSERT, partitioned steps mention
+- Structure: 5 -- Architecture diagram, config, resumability explanation
+- Efficiency: 5 -- Concise yet complete
+- Depth: 4 -- Parallel execution, idempotency
+- **Composite: 4.87**
+
+### Condition F
+- must_mention coverage: 5/5 -- Spring Batch, reader-processor-writer, chunk(500), JobRepository restart, skip/retry
+- must_not violations: None
+- Completeness: 5 -- All items covered
+- Precision: 5 -- JdbcPagingItemReader, virtual threads
+- Actionability: 5 -- Complete code
+- Structure: 5 -- Architecture diagram, key decisions table
+- Efficiency: 5 -- Concise
+- Depth: 4 -- Partitioned steps mention
 - **Composite: 4.87**
 
 ### Condition G
-- must_mention coverage: 5/5 -- Spring Batch, reader-processor-writer, chunk(1000), JobRepository, skip(500) + retry policies
-- must_not violations: None -- paging reader, never loads all
-- Completeness: 5 -- Full config with dual datasource + batch metadata DB, skip listener, job completion listener, DataSource config
-- Precision: 5 -- Correct, includes batch metadata DataSource separation
-- Actionability: 5 -- Complete production code with all listeners
-- Structure: 5 -- Excellent organization
-- Efficiency: 4 -- Very thorough
-- Depth: 5 -- Three separate datasources (batch metadata, source, target), page size vs chunk size distinction, detailed job completion logging
+- must_mention coverage: 5/5 -- Same thoroughness
+- must_not violations: None
+- Completeness: 5 -- Full code
+- Precision: 5 -- Correct
+- Actionability: 5 -- Complete implementation
+- Structure: 5 -- Well-organized
+- Efficiency: 4 -- Detailed
+- Depth: 5 -- ON CONFLICT, virtual threads, partitioning mention
 - **Composite: 4.87**
+
+### Condition H
+- must_mention coverage: 5/5 -- Spring Batch, reader-processor-writer, chunk(500), JobRepository, skipLimit(1000) + skip listener
+- must_not violations: None
+- Completeness: 5 -- Most thorough implementation
+- Precision: 5 -- SynchronizedItemStreamReader for thread safety, dead-letter table
+- Actionability: 5 -- Complete code with skip listener, progress listener, job listener
+- Structure: 5 -- Comprehensive with performance table
+- Efficiency: 3 -- Very verbose
+- Depth: 5 -- Thread-safe reader warning, partitioned step with range partitioner, idempotent upsert
+- **Composite: 4.73**
 
 ---
 
 ## Summary
 
-| Task | D | E | F | G |
-|------|---|---|---|---|
-| jp-001 | 4.87 | 4.07 | 4.27 | 4.73 |
-| jp-002 | 4.87 | 4.73 | 4.73 | 4.87 |
-| jp-003 | 4.87 | 4.27 | 4.53 | 4.87 |
-| jp-004 | 4.87 | 4.27 | 4.87 | 4.87 |
-| jp-005 | 4.87 | 4.40 | 4.87 | 4.87 |
-| **Mean** | **4.87** | **4.35** | **4.65** | **4.84** |
+| Task | D | E | F | G | H |
+|------|---|---|---|---|---|
+| jp-001 | 4.73 | 4.07 | 4.07 | 4.47 | 4.87 |
+| jp-002 | 4.87 | 4.73 | 4.60 | 4.87 | 4.73 |
+| jp-003 | 4.87 | 4.60 | 4.73 | 4.60 | 4.73 |
+| jp-004 | 4.87 | 4.20 | 4.47 | 4.87 | 4.73 |
+| jp-005 | 4.87 | 4.87 | 4.87 | 4.87 | 4.73 |
+| **Mean** | **4.84** | **4.49** | **4.55** | **4.74** | **4.76** |
